# beman-tidy

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/scripts/: create_library_beman_tidy_issue.py  detect_beman_tidy_mode.py
.github/workflows/: beman-tidy.yml  build_devcontainer.yml  codeql.yml  publish.yml  run-on-all-libraries.yml  run-on-exemplar.yml  sync-beman-standard.yml
beman_tidy/: .beman-standard.yaml  .beman-tidy.yaml  .beman-tidy.yml  cli.py
beman_tidy/lib/: pipeline.py
beman_tidy/lib/checks/base/: base_check.py  directory_base_check.py  file_base_check.py  multiple_files_base_check.py
beman_tidy/lib/checks/beman_standard/: cmake.py  cpp.py  directory.py  file.py  license.py  readme.py  release.py  repository.py
beman_tidy/lib/checks/system/: registry.py
beman_tidy/lib/utils/: cmake.py  comments.py  config.py  file.py  files.py  git.py  logger_config.py  standard_drift.py  string.py  terminal.py
cmake/: beman-install-library-config.cmake  use-fetch-content.cmake
containers/: install_compiler.sh
docs/: dev-guide.md  pre-commit.md
tests/: conftest.py
tests/ci/: test_create_library_beman_tidy_issue.py  test_detect_beman_tidy_mode.py
tests/data/: beman_standard.md
tests/lib/checks/beman_standard/cmake/: test_cmake.py
tests/lib/checks/beman_standard/cmake/data/implicit_defaults/invalid/: CMakeLists.txt
tests/lib/checks/beman_standard/cmake/data/invalid/: invalid-CMakeLists-v1.txt  invalid-CMakeLists-v2  invalid-CMakeLists-v2.txt  invalid-CMakeLists-v3.txt  invalid-avoid_passthroughs-v1.txt  invalid-avoid_passthroughs-v2.txt  invalid-avoid_passthroughs-v3.txt  invalid-config-v1.txt  invalid-config-v2.txt  invalid-default-v1.txt  invalid-default-v2.txt  (+26 more)
tests/lib/checks/beman_standard/cmake/data/invalid/repo-exemplar-v2/: CMakeLists.txt
tests/lib/checks/beman_standard/cmake/data/valid/passive_projects-v1/: CMakeLists.txt
tests/lib/checks/beman_standard/cmake/data/valid/repo-exemplar-v1/: CMakeLists.txt
tests/lib/checks/beman_standard/cmake/data/valid/repo-exemplar-v1/examples/: CMakeLists.txt
tests/lib/checks/beman_standard/cmake/data/valid/repo-exemplar-v1/tests/beman/exemplar/: CMakeLists.txt
tests/lib/checks/beman_standard/cpp/: test_cpp.py
tests/lib/checks/beman_standard/directory/: test_directory.py
tests/lib/checks/beman_standard/file/: test_file.py  test_file_test_names.py
tests/lib/checks/beman_standard/license/: test_license.py
tests/lib/checks/beman_standard/readme/: test_readme.py
tests/lib/checks/beman_standard/release/: test_release.py
tests/lib/checks/beman_standard/repository/: test_repository.py
tests/lib/checks/system/: test_registry.py
tests/lib/utils/: comments.py  test_cmake.py  test_config.py  test_config_disabled_rules.py  test_config_ignored_files.py  test_config_ignored_rules.py  test_standard_drift.py
tests/utils/: conftest.py  path_runners.py  registry.py
tools/beman-tidy/beman_tidy/lib/checks/beman_standard/: directory.py  toplevel.py
tools/beman-tidy/docs/: dev-guide.md
tools/beman-tidy/tests/utils/: file_testcase_runners.py
(+80 files in other folders)
