[project]
name = "beman-tidy"
version = "0.4.0"
description = "The Codebase Bemanification Tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Darius Neațu", email = "neatudarius@gmail.com" }]
maintainers = [{ name = "Rishyak", email = "hello@rishyak.com" }]
dependencies = [
    "cmake-parser>=0.9.2",
    "gitpython==3.1.47",
    "pyyaml==6.0.2",
]
keywords = [
  "beman",
  "bemanproject",
  "linting",
  "repository hygiene",
  "compliance",
  "beman standard",
  "pre-commit tool",
  "cli tool",
  "automation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = ["pytest>=8.4.0", "ruff>=0.11.13"]

[project.scripts]
beman-tidy = "beman_tidy.cli:main"

[tool.pytest.ini_options]
addopts = "-v"
